# molecular-property-prediction-of-bio-stimulants

./: README.md  pyproject.toml
source/: accelerate.json  eval.py  inf_g.py  model.py  run.sh  train_g.py  train_l.py  train_l_gem.py
