[project]
name = "bs-doc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.9.0",
    "bitsandbytes==0.46.1",
    "datasets>=4.0.0",
    "editables>=0.5",
    "hatchling>=1.27.0",
    "kernel>=0.9.0",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "peft==0.17.0",
    "scikit-learn>=1.7.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.55.0",
    "trl>=0.19.1",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "flash-attn>=2.8.1",
]
